# survive

./: .rusty-hook.toml  CLAUDE.md  Cargo.toml  README.md  shell.nix
.cargo/: config.toml
.github/workflows/: ci.yml  release-ios.yml  release-native.yml  release-wasm.yml
.husky/hooks/: pre-commit
camera/: Cargo.toml
camera/src/: plugin.rs
castle/: Cargo.toml
castle/src/: castle.rs  lib.rs  plugin.rs
combat/: Cargo.toml
combat/src/: plugin.rs
combat/src/events/: damage.rs
diagnostics/: Cargo.toml
diagnostics/src/: plugin.rs
enemy/: Cargo.toml
enemy/src/: enemy.rs  lib.rs  peasant.rs  plugin.rs
input/: Cargo.toml
level/: Cargo.toml
level/src/: ground.rs  lib.rs  plugin.rs  scenery.rs
models/: Cargo.toml
models/src/: attack.rs  damage_type.rs  distance.rs  draggable.rs  entity_health.rs  game_states.rs  grounded.rs  hardness.rs  health.rs  lib.rs  name.rs  scenery.rs  seconds.rs  speed.rs  textured.rs
survive_main/: Cargo.toml
survive_main/src/: main.rs
ui/: Cargo.toml
ui/src/: lib.rs  plugin.rs  window.rs
