[package]
name = "survive"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.13.2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[workspace]
resolver = "2"

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-Zshare-generics=y", "-C", "link-arg=-fuse-ld=/usr/bin/mold"]