[package]
name = "survive_main"
version = "0.1.0"
edition = "2021"

[dependencies]
castle = { path = "../castle" }
ui = { path = "../ui" }
models = { path = "../models" }
diagnostics = { path = "../diagnostics" }
level = { path = "../level" }
combat = { path = "../combat" }
enemy = { path = "../enemy" }
camera = { path = "../camera" }
bevy = "0.15.3"
bevy_rapier2d  = "0.29.0"

[dev-dependencies]
husky-rs = "0.1.3"
